@@ -3,6 +3,14 @@
         * Query/Query/SIMBAD.pm: Removed debugging statements which 
           generated a file containing a copy of the retrieved HTML in 
           the current working directory.
+        
+        * etc/sss.cfg: Added SkyCat SuperCOSMOS configuration file to 
+          default distribution
+        
+        * Makefile.PL: Modified makefile to install the SuperCOSMOS config
+          file to $(PERLPREFIX)/etc in preperation for shifting access to
+          SuperCOSMOS from being dependant on Astro::Aladin to using the
+          Astro::Catalog::Query::SkyCat module 
 
 2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>
 
